[gd_scene load_steps=2 format=3 uid="uid://curo2wso7d58"]

[ext_resource type="Script" path="res://assets/scenes/menu/scripts/MenuUI.gd" id="1_gceoc"]

[node name="MenuUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gceoc")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.45
anchor_bottom = 0.3
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1

[node name="Host" type="Control" parent="TabContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="TabContainer/Host"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.5
text = "9001"
placeholder_text = "Port"
alignment = 1

[node name="Button" type="Button" parent="TabContainer/Host"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.6
anchor_right = 0.6
anchor_bottom = 0.9
text = "Host"

[node name="Join" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="TabContainer/Join"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.5
text = "localhost:9001"
placeholder_text = "Server address"
alignment = 1

[node name="Button" type="Button" parent="TabContainer/Join"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.6
anchor_right = 0.6
anchor_bottom = 0.9
text = "Join"

[node name="NameContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.3
anchor_right = 0.45
anchor_bottom = 0.4
tabs_visible = false

[node name="Control" type="Control" parent="NameContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="NameContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.8
placeholder_text = "Your dislay name"
alignment = 1
max_length = 24

[node name="FeedbackContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.4
anchor_right = 0.45
anchor_bottom = 0.9
tabs_visible = false

[node name="Control" type="Control" parent="FeedbackContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="FeedbackContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.05
anchor_right = 0.9
anchor_bottom = 0.65
focus_mode = 2
bbcode_enabled = true
scroll_following = true
selection_enabled = true

[node name="LineEdit" type="LineEdit" parent="FeedbackContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.73
anchor_right = 0.9
anchor_bottom = 0.8

[node name="Button" type="Button" parent="FeedbackContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.85
anchor_right = 0.6
anchor_bottom = 0.9
text = "Disconnect"

[node name="PlayerList" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.55
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.75
tabs_visible = false

[node name="Control" type="Control" parent="PlayerList"]
layout_mode = 2

[node name="Header" type="Control" parent="PlayerList/Control"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.12

[node name="Label" type="Label" parent="PlayerList/Control/Header"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.15
anchor_bottom = 1.0
text = "ROLE"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Label2" type="Label" parent="PlayerList/Control/Header"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_right = 0.45
anchor_bottom = 1.0
text = "ID"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Label3" type="Label" parent="PlayerList/Control/Header"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.45
anchor_right = 0.85
anchor_bottom = 1.0
text = "NAME"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Label4" type="Label" parent="PlayerList/Control/Header"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.85
anchor_right = 1.0
anchor_bottom = 1.0
text = "READY"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="ScrollContainer" type="ScrollContainer" parent="PlayerList/Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.12
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerList/Control/ScrollContainer"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2

[node name="HideButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.4
anchor_right = 0.02
anchor_bottom = 0.6
offset_right = 8.0
offset_bottom = 8.0
text = "Hide"

[node name="ShowButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.4
anchor_right = 1.02
anchor_bottom = 0.6
offset_right = 8.0
offset_bottom = 8.0
tooltip_text = "Open the menu panel"
text = "Show"

[node name="ReadyButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6
anchor_top = 0.8
anchor_right = 0.7
anchor_bottom = 0.85
text = "Ready"

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_top = 0.8
anchor_right = 0.9
anchor_bottom = 0.85
text = "Start"

[node name="ReadyCheckBox" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7
anchor_top = 0.8
anchor_right = 0.71
anchor_bottom = 0.85
focus_mode = 0
disabled = true
clip_text = true
icon_alignment = 1
expand_icon = true
